Gpio list is read from the raspberry pi instead of hard coded

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<img src=pinout.png></img>
 		</div>
 		<div id=connData>
-			<input type=text id=kinput><input type=button value="Imposta" id=connBtn>
+			<input type=text id=kinput><input type=button value="Connect to Raspberry pi" id=connBtn>
 		</div>
 		<div id=setup>
 			<ul>
