--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="PiAmigaJoystick.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 		<script src="PiAmigaJoystick.js"></script>
 	</head>
 	<body>
@@ -63,6 +63,10 @@
 				<li>
 					<label for="keyboardDownBtn">Keyboard DOWN button: </label>
 					<input type=button id=keyboardDownBtn value=DOWN keyCode=40>
+				</li>
+				<li>
+					<label for="keyboardAutoFireBtn">Keyboard AUTOFIRE Toggle/Untoggle button: </label>
+					<input type=button id=keyboardAutoFireBtn value=A keyCode=65>
 				</li>
 			</ul>
 		</div>
