--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 				<li>
 					<label for="keyboardAutoFireBtn">Keyboard AUTOFIRE Toggle/Untoggle button: </label>
 					<input type=button id=keyboardAutoFireBtn value=A keyCode=65>
+					<input type="range" min="40" max="1000" value="100" step="10" class="slider" id="keyboardAutoFireBtnRange">
+					<div id=output></div>
 				</li>
 			</ul>
 		</div>
